Add images preload

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       sizes="16x16"
       href="/favicon/favicon-16x16.png"
     />
+    <link rel="preload" href="images/hg-0" as="image" />
+    <link rel="preload" href="images/hg-1" as="image" />
+    <link rel="preload" href="images/hg-2" as="image" />
+    <link rel="preload" href="images/hg-3" as="image" />
+    <link rel="preload" href="images/hg-4" as="image" />
+    <link rel="preload" href="images/hg-5" as="image" />
+    <link rel="preload" href="images/hg-6" as="image" />
+    <link rel="preload" href="images/hg-7" as="image" />
+    <link rel="preload" href="images/hg-9" as="image" />
+    <link rel="preload" href="images/hg-10" as="image" />
+    <link rel="preload" href="images/hg-win" as="image" />
   </head>
   <body>
     <div id="app">
